# weixin_manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
official_account_cancel/: __init__.py  __main__.py  cli.py  config.py  config.yml  gui.py  workflow.py
